# image_processor

./: CMakeLists.txt  Image.cpp  Image.h  image_processor.cpp  readme.md
file_worker/: FileWorker.cpp  FileWorker.h
filters/: FilterAnaglyph.cpp  FilterAnaglyph.h  FilterCrop.cpp  FilterCrop.h  FilterEdgeDetection.cpp  FilterEdgeDetection.h  FilterGauss.cpp  FilterGauss.h  FilterGrayscale.cpp  FilterGrayscale.h  FilterNegative.cpp  FilterNegative.h  FilterSharpening.cpp  FilterSharpening.h  MatrixFilter.cpp  MatrixFilter.h
test_dir/: CMakeLists.txt  test.cpp
